hphp/hack/test/typecheck/return_mismatch/return_with_and_without_expr7.php
<?hh

function returnsvoid() : void {}

function test() : void {

  $lam = (bool $b) ==> {
    if($b) {
      return returnsvoid();
    }
  };

}
